# forex-ai-trading-system

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_INTELLIGENCE_REPORT.md  LICENSE  Makefile  README.md  opencode.json  render.yaml  start_frontend.vbs  start_intelligence_report.bat  start_tunnel.bat
backend/: Dockerfile  alembic.ini  pyproject.toml  run_backend.py  start_backend.bat
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_event_outbox.py  003_performance_indexes.py  004_compliance_auditing.py
backend/scripts/: seed_data.py
backend/src/forex_trading/: __init__.py  config.py  main.py
backend/src/forex_trading/ai/: __init__.py  orchestrator.py
backend/src/forex_trading/ai/agents/: __init__.py  base.py  entry.py  exit.py  liquidity.py  market_structure.py  risk_agent.py  sentiment.py  smart_money.py  trend.py  volatility.py
backend/src/forex_trading/ai/api/: __init__.py
backend/src/forex_trading/ai/consensus/: __init__.py  engine.py
backend/src/forex_trading/ai/domain/: __init__.py
backend/src/forex_trading/ai/services/: __init__.py  feature_service.py
backend/src/forex_trading/ai/xai/: __init__.py  explainer.py
backend/src/forex_trading/analytics/: __init__.py  engine.py
backend/src/forex_trading/analytics/api/: __init__.py  router.py
backend/src/forex_trading/analytics/backtesting/: __init__.py  engine.py  paper_trading.py
backend/src/forex_trading/analytics/optimization/: __init__.py  optuna_optimizer.py
backend/src/forex_trading/api/: __init__.py  dependencies.py  router.py  websocket.py
backend/src/forex_trading/broker/: __init__.py  gateway.py
backend/src/forex_trading/connectivity/: __init__.py  mt5_manager.py
backend/src/forex_trading/core/: __init__.py  exceptions.py  middleware.py  rate_limit.py  security.py
backend/src/forex_trading/execution/: __init__.py  engine.py  position_manager.py
backend/src/forex_trading/market_data/: __init__.py
backend/src/forex_trading/notifications/: __init__.py  manager.py
backend/src/forex_trading/risk/: __init__.py  engine.py
backend/src/forex_trading/shared/: __init__.py  cache.py  database.py  di.py  events.py
backend/src/forex_trading/strategy/: __init__.py  engine.py
backend/tests/: conftest.py  factories.py
backend/tests/e2e/: __init__.py  test_trading_flow.py
backend/tests/integration/: test_api.py
backend/tests/load/: __init__.py  test_load.py
backend/tests/security/: test_security.py
backend/tests/test_ai/: test_consensus.py  test_explainer.py  test_feature_service.py  test_orchestrator.py
backend/tests/test_compliance/: __init__.py  test_audit_chain.py  test_classification.py  test_consent.py  test_disclosure.py  test_pii.py  test_reconstruction.py  test_reporting.py  test_retention.py
backend/tests/test_execution/: test_auto_trader.py  test_engine.py  test_position_manager.py  test_position_sizer.py
backend/tests/test_integration/: test_full_trade_lifecycle.py
backend/tests/test_monitoring/: test_logging.py  test_metrics.py
backend/tests/test_performance/: __init__.py  test_cache_manager.py  test_database_engine.py  test_feature_service_performance.py  test_orchestrator_performance.py  test_outbox_performance.py  test_position_manager_performance.py  test_repository_performance.py  test_websocket_performance.py
backend/tests/test_risk/: test_risk_engine.py
backend/tests/test_security/: test_api_keys.py  test_audit.py  test_rate_limit.py  test_secrets.py
backend/tests/test_shared/: test_di.py  test_engine.py  test_outbox.py  test_repository.py  test_uow.py
backend/tests/unit/: test_ai_agents.py  test_analytics_backtesting.py  test_analytics_engine.py  test_api_layer.py  test_broker_plugins.py  test_core_domain.py  test_market_data.py  test_notifications.py  test_optimization.py  test_paper_trading.py  test_risk_engine.py  test_strategy_and_execution.py
deploy/: README.md  deploy.sh  (+1 more)
(+300 files in other folders)
